Implement server-defined namespace ids
